# PyTorchMultiTaskVision

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  abel_augmentations.py  config.py  datasets.py  engine.py  modelchange.py  optim_factory.py  pyproject.toml  train.py  train_cls.py  train_det.py  utils.py  val.py
configs/: base.toml  classification.toml  detection.toml
docs/: bmm-workflow-status.yaml  index.md
nets/: Abel.py  CLAUDE.md  Resmlp.py  convnext_v2.py  timesnet.py  yolo.py  yolo_training.py
utils/: CLAUDE.md  NumericalRegressionUtils.py  callbacks.py  checkpoint.py  coco_dataloader.py  coco_utils.py  dataloader.py  loggers.py  metrics.py  runtime.py  sampler.py  scheduler.py  utils.py  utils_bbox.py  utils_fit.py  utils_map.py  vision.py  yolo_transforms.py
utils_coco/: CLAUDE.md  coco_annotation.py  coco_evaluation.py  get_map_coco.py
