[project]
name = "pytorchmultitaskvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.9.1",
    "timm>=1.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "tensorboardx>=2.6.0",
    "pycocotools>=2.0.7",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "submitit>=1.5.0",
    "rich>=13.0.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
]

# 注意：apex包需要手动安装，不包含在依赖列表中

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "pytorch-cuda130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda130" }]
torchvision = [{ index = "pytorch-cuda130" }]
torchaudio = [{ index = "pytorch-cuda130" }]

